--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "mongoose": "^8.9.2",
     "next": "^15.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
+    "@eslint/config-array": "^0.19.1",
+    "@eslint/object-schema": "^2.1.5",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.2",
+    "glob": "^11.0.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.17"
   }
 }
