--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.0",
     "autoprefixer": "^10.4.20",
     "mongoose": "^8.9.2",
     "next": "^15.0.2",
